2005-07-14  Geoffrey Garen  <ggaren@apple.com>

        - landed fix for <http://bugzilla.opendarwin.org/show_bug.cgi?id=3677>
        Safari fail to access a second time an element whose content was dynamically modified.
        
        - patch by Anders Carlsson <andersca@mac.com>.

        Reviewed by mjs + darin.

        Test cases added:
        * layout-tests/fast/dom/ids/duplicate-ids-expected.txt: Added.
        * layout-tests/fast/dom/ids/duplicate-ids.html: Added.
        
        * khtml/xml/dom_docimpl.cpp:
        (DocumentImpl::getElementById):
        If no element in the id dict can be found and we know that there's
        at least one other element with the same id around, then traverse the document
        and insert the new element in the id table.
        
        (DocumentImpl::addElementById):
        (DocumentImpl::removeElementById):
        Increment and decrement the id count accordingly.
        
        * khtml/xml/dom_docimpl.h:
        Add QDict for id counts. Make element QDict mutable.

2005-07-14  Geoffrey Garen  <ggaren@apple.com>

        -landed layout test for http://bugzilla.opendarwin.org/show_bug.cgi?id=3412
        Object.prototype is missing toLocaleString

        Reviewed by mjs.

        Test cases added:
        * layout-tests/fast/js/object-prototype-toLocaleString-expected.txt: Added.
        * layout-tests/fast/js/object-prototype-toLocaleString.html: Added.

2005-07-14  Vicki Murley  <vicki@apple.com>

        Reviewed by Kocienda.

        - WebCore part of fix for  <rdar://problem/4172380> [GENENTECH] window.opener 
        not available when child opened via target="_new"

        Add a setOpener function to the WebCore bridge, and call this function when opening
        new windows through Web Kit.

        * kwq/WebCoreBridge.h:
        * kwq/WebCoreBridge.mm:

2005-07-12  Maciej Stachowiak  <mjs@apple.com>

        Reviewed by Kevin.

        - convert some more things to use the new hashtable
