@@ -1,0 +1,11 @@
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
+<html lang="en"><head>
+<body>
+<p>Reference the opener, its properties and functions via the links below.</p>
+<ol>
+
+<li>Clicking <a href="#" onclick="alert(window.opener)">here</a> should alert "[object Window]"</li>
+<li>Clicking <a href="#" onclick="alert(window.opener.aVar)">here</a> should alert "some value"</li>
+<li>Clicking <a href="#" onclick="window.opener.externallyCalled()">here</a> should alert "hello from opener"</li>
+</ol>
+</body></html>
