@@ -1,0 +1,28 @@
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01//EN"
+        "http://www.w3.org/TR/html4/strict.dtd">
+<html lang="en">
+<head>
+<script type="text/javascript" language="javascript" charset="utf-8">
+ var aVar = "some value";
+ function externallyCalled() {
+ 	alert("hello from opener");
+ }
+</script>
+</head>
+<body>
+<p><b>BUG ID:</b> <a href="rdar://problem/4172380">4172380</a> [GENENTECH] window.opener not available when child opened via target="_new"</p>
+
+<p id="test" style="background-color:skyblue; padding:3px;"><b>STEPS TO TEST:</b> 
+Click link below, then click links in the window that opens.</p>
+
+<p id="success" style="background-color:palegreen; padding:3px;"><b>TEST PASS:</b> 
+Links in the new window that opens will alert "[object Window]", "some value", and "hello from opener".
+</p>
+
+<p id="failure" style="background-color:#FF3300; padding:3px;"><b>TEST FAIL:</b>  
+First link in the new window that opens will alert "null", and the other two links will not work at all.
+</p>
+
+<a href="target_new-1.html" target="_new">Click this link to begin test</a>
+</body>
+</html>
